--- a/public/styles/_utilities.scss
+++ b/public/styles/_utilities.scss
@@ -1,12 +1,33 @@
 $base-color: #EEBB39;
 
+$dfxs: 0.7rem;
 $dfs: 0.8rem;
 $dfm: 1rem;
 $dfmx2: 1.4rem;
 $dfb: 1.4rem;
 
+$mfxs: 0.9rem;
 $mfs: 1rem;
 $mfm: 1.2rem;
 $mfmx2: 1.4rem;
 $mfmx3: 1.8rem;
 $mfb: 2.6rem;
+
+.red{
+    background-color: red;
+}
+.green{
+    background-color: green;
+}
+.yellow{
+    background-color: yellow;
+}
+.pink{
+    background-color: pink;
+}
+.brown{
+    background-color: brown;
+}
+.purple{
+    background-color: purple;
+}
