--- a/public/styles/_contact.scss
+++ b/public/styles/_contact.scss
@@ -94,7 +94,7 @@
 @media only screen and (min-width: 901px) {
     .contact_container{
         & h1{
-            margin: 6rem 0 2em 0;
+            margin: 6rem 0 3rem 0;
             width: 100%;
             text-align: left;
         }
@@ -119,7 +119,7 @@
                 }
 
                & .paragraph:nth-child(2) label textarea {
-                   height: 18em;
+                   height: 15em;
                }
 
             & div{
