--- a/public/styles/_product.scss
+++ b/public/styles/_product.scss
@@ -12,6 +12,9 @@
              color: black;
              text-decoration: none;
          }
+         & p{
+             margin: 0;
+         }
      }
      & .product_gallery{
          width: 100%;
@@ -31,8 +34,8 @@
             align-items: flex-start;
              & span:nth-child(1){
                  width: 100%;
-                 margin-bottom: 1rem;
-                 @include font-size($dfm, $mfs);
+                 margin-bottom: 1.2rem;
+                 @include font-size($dfs, $mfs);
                  color: rgb(70, 69, 69);
              }
              & span:nth-child(2){
@@ -54,7 +57,7 @@
         width: 9rem;
         border: 1px black solid;
         @include display-flex(row, space-around);
-        padding: 1rem;
+        padding: 0.6rem;
             & p{
                 height: 100%;
                 margin: 0;
@@ -73,7 +76,7 @@
     grid-gap: 1rem;
     & span{
         @include display-flex(row, center);
-        padding: 0.5rem;
+        padding: 0.6rem;
         border: 1px black solid;
          & small{
             margin-left: 0.5rem;
