Add funcion which delete product arrays
Previously, loader in offers page wasn't popping up on second category
selection, because products array already existed. Now, on every
click on select, that array is removed, so loader is popping again.

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1378,6 +1378,8 @@ body, html {
       -ms-flex-direction: row;
           flex-direction: row;
   position: absolute;
+  left: 0;
+  top: 0;
 }
 
 .offers_container .offers .spinner span {
