--- a/public/styles/_offers.scss
+++ b/public/styles/_offers.scss
@@ -91,6 +91,8 @@
                     min-width: 100%;
                     @include display-flex(row, center);
                     position: absolute;
+                    left: 0;
+                    top: 0;
                         & span {
                                 border: 5px solid #f3f3f3;
                                 border-radius: 50%;
