--- a/public/styles/_burger.scss
+++ b/public/styles/_burger.scss
@@ -2,13 +2,14 @@
 
 .burgerek{
     background-color: white;
-    transition: all 0.7s linear;
+    transition: 0.4s linear;
     min-width : 100%;
-    height: 40%;
+    height: 20em;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    box-sizing: border-box;
     padding:0;
     margin:0;
     z-index: 99;
@@ -17,10 +18,15 @@
             display:flex;
             justify-content: center;
             align-items: center;
-            height: 25%; 
+            height: 33.3%;
+            width: 100%;
+            margin: 0;
             color: white;
                 a{
                     color: black;
+                    height: 100%;
+                    width: 100%;
+                    @include display-flex(row,center)
                 }
         }
 }
@@ -28,7 +34,7 @@
 .display_off{
     position: fixed;
     left: 0;
-    top: -100%;
+    top: -20em;
 }
 
 .display_in{
