--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -125,9 +125,10 @@ body, html {
 }
 
 .menu ul li {
+  height: 100%;
   width: auto;
-  list-style: none;
   margin: auto;
+  list-style: none;
   -webkit-transition: linear 200ms;
   transition: linear 200ms;
 }
@@ -142,7 +143,22 @@ body, html {
   transition: 300ms ease-in-out;
   text-decoration: none;
   color: black;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
   font-weight: 500;
+  height: 100%;
+  width: 100%;
 }
 
 @media only screen and (max-width: 900px) {
@@ -183,10 +199,10 @@ body, html {
 
 .menu .burgerek {
   background-color: white;
-  -webkit-transition: all 0.7s linear;
-  transition: all 0.7s linear;
+  -webkit-transition: 0.4s linear;
+  transition: 0.4s linear;
   min-width: 100%;
-  height: 40%;
+  height: 20em;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -200,6 +216,8 @@ body, html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
   padding: 0;
   margin: 0;
   z-index: 99;
@@ -216,18 +234,35 @@ body, html {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  height: 25%;
+  height: 33.3%;
+  width: 100%;
+  margin: 0;
   color: white;
 }
 
 .menu .burgerek li a {
   color: black;
+  height: 100%;
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
 }
 
 .menu .display_off {
   position: fixed;
   left: 0;
-  top: -100%;
+  top: -20em;
 }
 
 .menu .display_in {
@@ -2675,6 +2710,15 @@ body, html {
   margin: 4rem 0;
 }
 
+.product_container .adresatka_content textarea {
+  width: 100%;
+  resize: none;
+  margin: 0;
+  padding: 0;
+  border: 1px black solid;
+  height: 5rem;
+}
+
 .sizes {
   display: -ms-grid;
   display: grid;
@@ -2783,6 +2827,9 @@ body, html {
   .back_to_offers_button {
     margin: 3rem 0 1.5rem 0;
   }
+  .adresatka_content {
+    width: 14rem;
+  }
 }
 
 @media only screen and (min-width: 901px) {
@@ -2800,6 +2847,9 @@ body, html {
   }
   .product_gallery {
     min-width: 25rem;
+  }
+  .adresatka_content {
+    width: 20rem;
   }
 }
 /*# sourceMappingURL=main.css.map */
