Keep dry, create components for products templates
New components in products folder, in productsComponent,
setting color and quantity.
Added function colecting that data in products state,
getting ready to send it in object to cart.
Also styles applied.

--- a/public/styles/_offers.scss
+++ b/public/styles/_offers.scss
@@ -8,8 +8,6 @@
     margin: 0 auto;
     box-sizing: border-box;
     
-    
-
         & .offers{
             display: grid;
             grid-template-columns: repeat( auto-fill, minmax( 14em, 1fr ) );
@@ -19,6 +17,10 @@
             max-width: 100%;
                 & a{
                     text-decoration: none;
+                     &:hover{
+                         transition: 200ms ease-in-out;
+                         transform: translateY(-3px);
+                     }
                 }
                 & div {
                     border: black 2px solid;
