--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1268,6 +1268,13 @@ body, html {
   text-decoration: none;
 }
 
+.offers_container .offers a:hover {
+  -webkit-transition: 200ms ease-in-out;
+  transition: 200ms ease-in-out;
+  -webkit-transform: translateY(-3px);
+          transform: translateY(-3px);
+}
+
 .offers_container .offers div {
   border: black 2px solid;
 }
@@ -2553,6 +2560,7 @@ body, html {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+  position: relative;
 }
 
 @media only screen and (max-width: 900px) {
@@ -2673,6 +2681,7 @@ body, html {
 .product_container .quantity {
   width: 9rem;
   border: 1px black solid;
+  padding: 0.6rem 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2685,12 +2694,51 @@ body, html {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  padding: 0.6rem;
 }
 
 .product_container .quantity p {
   height: 100%;
+  width: 35%;
   margin: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+  border-right: 1px solid black;
+}
+
+.product_container .quantity div {
+  height: 100%;
+  width: 65%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.product_container .quantity div i:hover {
+  cursor: pointer;
+}
+
+.product_container .quantity div i:nth-child(1) {
+  margin-right: 0.8rem;
 }
 
 .product_container .button_add_to_cart {
@@ -2745,6 +2793,13 @@ body, html {
           flex-direction: row;
   padding: 0.6rem;
   border: 1px black solid;
+  -webkit-transition: 150ms linear;
+  transition: 150ms linear;
+}
+
+.sizes span:hover {
+  background-color: rgba(192, 194, 94, 0.432);
+  cursor: pointer;
 }
 
 .sizes span small {
@@ -2791,7 +2846,28 @@ body, html {
           flex-direction: row;
 }
 
-.colors span {
+.colors div {
+  height: 2rem;
+  width: 2rem;
+  margin-right: 0.5rem;
+  border: 1px black solid;
+  -webkit-transition: 150ms linear;
+  transition: 150ms linear;
+}
+
+.colors div:hover {
+  -webkit-transform: scale(1.1) rotate(5deg);
+          transform: scale(1.1) rotate(5deg);
+  cursor: pointer;
+}
+
+.colors .choosed_color {
+  -webkit-transform: scale(1.1) rotate(5deg);
+          transform: scale(1.1) rotate(5deg);
+  border: 1px dotted grey;
+}
+
+.colors input {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -2805,10 +2881,42 @@ body, html {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  height: 2rem;
-  width: 2rem;
-  margin-right: 0.5rem;
-  border: 1px black solid;
+  width: 100%;
+  height: 100%;
+  border: 0;
+  margin: 0;
+  opacity: 0;
+}
+
+.product_spinner {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  min-height: calc(100vh - 6em);
+  max-width: 80%;
+  margin: 0 auto;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.product_spinner span {
+  border: 5px solid #f3f3f3;
+  border-radius: 50%;
+  border-top: 5px solid #EEBB39;
+  width: 90px;
+  height: 90px;
+  -webkit-animation: spin 2s linear infinite;
+  animation: spin 2s linear infinite;
 }
 
 @media only screen and (max-width: 901px) {
