--- a/public/styles/_product.scss
+++ b/public/styles/_product.scss
@@ -104,8 +104,9 @@
         padding: 0.6rem;
         border: 1px black solid;
         transition: 150ms linear;
+        position: relative;
         &:hover{
-            background-color: rgba(192, 194, 94, 0.432);
+            background-color: rgba(250, 240, 94, 0.699);
             cursor: pointer;
             }
          & small{
@@ -115,6 +116,15 @@
          & b{
             @include font-size($dfs , $mfxs);
          }
+        & input{
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            opacity: 0;
+        }
+    }
+    .choosed_size{
+        background-color: rgba(250, 240, 94, 0.699);
     }
 }
 
@@ -133,7 +143,6 @@
         }
         .choosed_color{
             transform: scale(1.1) rotate(5deg);
-            border: 1px dotted grey;
         }
         & input{
             @include display-flex(row, center);
