--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2795,10 +2795,11 @@ body, html {
   border: 1px black solid;
   -webkit-transition: 150ms linear;
   transition: 150ms linear;
+  position: relative;
 }
 
 .sizes span:hover {
-  background-color: rgba(192, 194, 94, 0.432);
+  background-color: rgba(250, 240, 94, 0.699);
   cursor: pointer;
 }
 
@@ -2828,6 +2829,17 @@ body, html {
   .sizes span b {
     font-size: 0.9rem;
   }
+}
+
+.sizes span input {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  opacity: 0;
+}
+
+.sizes .choosed_size {
+  background-color: rgba(250, 240, 94, 0.699);
 }
 
 .colors {
@@ -2864,7 +2876,6 @@ body, html {
 .colors .choosed_color {
   -webkit-transform: scale(1.1) rotate(5deg);
           transform: scale(1.1) rotate(5deg);
-  border: 1px dotted grey;
 }
 
 .colors input {
