--- a/public/styles/_cart.scss
+++ b/public/styles/_cart.scss
@@ -58,7 +58,6 @@
                 & .product_image{
                     height: 100%;
                     @include display-flex(row, space-between);
-                    padding-bottom: 1em;
                     & img{
                         max-height: 100%;
                         box-sizing: border-box;
@@ -147,7 +146,8 @@
     }
 }
 
-@media only screen and (max-width: 901px) {
+
+@media only screen and (max-width: 501px) {
     .cart_container{
         & .products_and_summary{
             margin-bottom: 3rem;
@@ -158,8 +158,10 @@
                             padding: 1em
                         }
                         & .product_image{
+                            padding: 1em 0;
+                            @include display-flex(column, center);
                             & img{
-                                padding: 0 0 0 1em ;
+                                padding: 0 ;
                             }
                         }
                         & .delete_product{
@@ -195,6 +197,55 @@
     }
 }
 
+@media only screen and (min-width: 501px) {
+    .cart_container{
+        & .products_and_summary{
+            margin-bottom: 3rem;
+            @include display-flex(column, center);
+                & .products_container{
+                    width: 100%;
+                        & .products_description{
+                            padding: 1em 2em
+                        }
+                        & .product_image{
+                            padding: 0 0 1em 0;
+                            @include display-flex(row, center);
+                            & img{
+                                padding: 0 0 0 2em ;
+                            }
+                        }
+                        & .delete_product{
+                            padding: 0 1em 1em 2em;
+                        }
+                }
+                .summary{
+                    width: 100%;
+                    margin-top: 3em;
+                    padding-bottom: 2em;
+                        & h2{
+                            margin-top: 2rem;
+                        }
+                }     
+        }
+    }
+    .cart_container h1{
+        margin: 3rem 0 3rem 0;
+    }
+    .cart_container.empty{
+        & img{
+            margin-bottom: 3em;
+            max-width: 70%;
+        }
+        & div{
+            margin-bottom: 3em;
+         }
+    }
+    .product_image{
+        & img{
+            max-width: 9em;
+        }
+    }
+}
 
 @media only screen and (min-width: 901px) {
     .cart_container{
@@ -204,14 +255,12 @@
             align-items: flex-start;
                 & .products_container{
                     width: 50%;
-                        & .products_description{
-                            padding: 1em 3em
-                        }
                 }
                 & .summary{
                     width: 50%;
                     margin-left: 3em;
                     padding-bottom: 3em;
+                    margin-top: 0;
                         & h2{
                             margin-top: 3rem;
                         }
@@ -220,9 +269,6 @@
                     & img{
                         padding: 0 0 0 3em ;
                     }
-                }
-                & .delete_product{
-                    padding: 0 1em 1em 3em;
                 }
         }
     }
