Add function which will calculate item price
It is based on product size. Function expect initial price,
size1 if product has only one size, and second, in case if
item has two sizes. If product has only one size, second
argument should remain as "empty"

--- a/public/styles/_cart.scss
+++ b/public/styles/_cart.scss
@@ -160,8 +160,9 @@
                         & .product_image{
                             padding: 1em 0;
                             @include display-flex(column, center);
+                            align-items: flex-start;
                             & img{
-                                padding: 0 ;
+                                padding: 0 0 0 1em ;
                             }
                         }
                         & .delete_product{
