Add full validation for both options
*Number can only contains numbers, and it have to be 9 characters,
*checkbox must be checked to continue - ref and checked method helped a
lot with that

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -2360,6 +2360,11 @@ body, html {
   }
 }
 
+.inpost_container .error_adres_p, .dpd_container .error_adres_p, .error_adres .error_adres_p {
+  margin: auto;
+  width: 100%;
+}
+
 .inpost_container .data_form, .dpd_container .data_form, .error_adres .data_form {
   width: 100%;
 }
