--- a/public/styles/_adress.scss
+++ b/public/styles/_adress.scss
@@ -11,6 +11,10 @@
     & h1{
         @include font-size($dfb, $mfb);
      }
+    .error_adres_p{
+        margin: auto;
+        width: 100%;
+    }
     & .data_form{
         width: 100%;
         & form {
